# claude-model-changer

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
claude_model_changer/: __init__.py  __main__.py  cli.py  profile_manager.py
